--- a/automation/ansible.cfg
+++ b/automation/ansible.cfg
@@ -15,6 +15,7 @@ callback_plugins = ./plugins/callback
 # Enable JSON logging if 'ANSIBLE_JSON_LOG_FILE' environment variable is defined (example: ANSIBLE_JSON_LOG_FILE=./ansible_log.json)
 callbacks_enabled = json_log
 roles_path = ./roles
+module_name = vitabaks
 
 [ssh_connection]
 ssh_args = -o Ciphers=aes128-ctr -o MACs=hmac-sha2-256 -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=3 -o ServerAliveInterval=5 -o ServerAliveCountMax=10
