--- a/automation/ansible.cfg
+++ b/automation/ansible.cfg
@@ -16,6 +16,7 @@ callback_plugins = ./plugins/callback
 callbacks_enabled = json_log
 roles_path = ./roles
 module_name = vitabaks
+playbook_dir = ./playbooks
 
 [ssh_connection]
 ssh_args = -o Ciphers=aes128-ctr -o MACs=hmac-sha2-256 -o ControlMaster=auto -o ControlPersist=30m -o ConnectionAttempts=3 -o ServerAliveInterval=5 -o ServerAliveCountMax=10
