--- a/automation/vars/main.yml
+++ b/automation/vars/main.yml
@@ -5,3 +5,31 @@ postgresql_data_dir: "/var/lib/postgresql/{{ postgresql_version }}/main"
 cluster_vip: "192.168.68.100"
 with_haproxy_load_balancing: true
 dcs_type: "etcd"
+
+nameservers:
+  - "8.8.8.8"
+  - "8.8.4.4"
+ntp_enabled: true
+ntp_servers:
+  - "time.google.com"
+  - "us.pool.ntp.org"
+timezone: "America/New_York"
+locale_gen:
+  - { language_country: "en_US", encoding: "UTF-8" }
+locale: "en_US.utf-8"
+
+postgresql_databases:
+  - { db: "awareauth", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "postgres" }
+  - { db: "awareasset", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "postgres" }
+  - { db: "awareiot", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "postgres" }
+
+postgresql_packages:
+  - postgresql-{{ postgresql_version }}
+  - postgresql-client-{{ postgresql_version }}
+  - postgresql-contrib-{{ postgresql_version }}
+  - postgresql-server-dev-{{ postgresql_version }}
+  - postgresql-{{ postgresql_version }}-dbgsym
+  - postgresql-{{ postgresql_version }}-cron
+
+postgresql_extensions:
+  - { ext: "pg_cron", db: "postgres" }
