--- a/automation/vars/main.yml
+++ b/automation/vars/main.yml
@@ -17,6 +17,7 @@ timezone: "America/New_York"
 locale_gen:
   - { language_country: "en_US", encoding: "UTF-8" }
 locale: "en_US.utf-8"
+pending_restart: true
 
 postgresql_databases:
   - { name: "awareauth", encoding: "UTF8", lc_collate: "en_US.UTF-8", lc_ctype: "en_US.UTF-8", owner: "postgres" }
