--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -1034,6 +1034,8 @@ apt_repository:
 #  - repo: "deb https://deb.debian.org/debian/ {{ ansible_distribution_release }} main"
 #  - repo: "deb https://deb.debian.org/debian/ {{ ansible_distribution_release }}-updates main"
 #  - repo: "deb https://security.debian.org/debian-security/ {{ ansible_distribution_release }}/updates main"
+  - repo: "deb https://repo.pigsty.io/apt/pgsql/{{ ansible_distribution_release }} {{ ansible_distribution_release }} main"  # Pigsty apt repository
+    key: "https://repo.pigsty.io/key"  # Pigsty apt repository key
 
 # RedHat
 yum_repository: []
@@ -1062,6 +1064,13 @@ postgresql_os_specific_packages:
 #   - postgresql-{{ postgresql_version }}-pgvector
 #   - postgresql-{{ postgresql_version }}-pgaudit
 #   - postgresql-{{ postgresql_version }}-partman
+    - timescaledb-2-postgresql-{{ postgresql_version }}
+    - timescaledb-toolkit-postgresql-{{ postgresql_version }}
+    - postgresql-{{ postgresql_version }}-pg-timeseries
+    - postgresql-{{ postgresql_version }}-pg-task
+    - postgresql-{{ postgresql_version }}-pg-later
+    - postgresql-{{ postgresql_version }}-pg-background
+    - postgresql-{{ postgresql_version }}-pg-stat-monitor
   RedHat:
     - postgresql{{ postgresql_version }}
     - postgresql{{ postgresql_version }}-server
