--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -1036,6 +1036,8 @@ apt_repository:
 #  - repo: "deb https://security.debian.org/debian-security/ {{ ansible_distribution_release }}/updates main"
   - repo: "deb https://repo.pigsty.io/apt/pgsql/{{ ansible_distribution_release }} {{ ansible_distribution_release }} main"  # Pigsty apt repository
     key: "https://repo.pigsty.io/key"  # Pigsty apt repository key
+  - repo: "deb https://packagecloud.io/timescale/timescaledb/debian/ {{ ansible_distribution_release }} main" # timescaledb apt repository
+    key: "https://packagecloud.io/timescale/timescaledb/gpgkey" # timescaledb apt repository key
 
 # RedHat
 yum_repository: []
