--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -1031,12 +1031,12 @@ pkg_type: "{{ 'deb' if ansible_os_family == 'Debian' else 'rpm' }}"
 apt_repository:
   - repo: "deb https://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main" # postgresql apt repository
     key: "https://apt.postgresql.org/pub/repos/apt/ACCC4CF8.asc" # postgresql apt repository key
-#  - repo: "deb https://deb.debian.org/debian/ {{ ansible_distribution_release }} main"
-#  - repo: "deb https://deb.debian.org/debian/ {{ ansible_distribution_release }}-updates main"
-#  - repo: "deb https://security.debian.org/debian-security/ {{ ansible_distribution_release }}/updates main"
+  - repo: "deb https://deb.debian.org/debian/ {{ ansible_distribution_release }} main"
+  - repo: "deb https://deb.debian.org/debian/ {{ ansible_distribution_release }}-updates main"
+  - repo: "deb https://security.debian.org/debian-security/ {{ ansible_distribution_release }}/updates main"
   - repo: "deb https://repo.pigsty.io/apt/pgsql/{{ ansible_distribution_release }} {{ ansible_distribution_release }} main"  # Pigsty apt repository
     key: "https://repo.pigsty.io/key"  # Pigsty apt repository key
-  - repo: "deb https://packageclound.io/timescale/timescaledb/ubuntu/ {{ ansible_distribution_release }} main" # TimescaleDB apt repository
+  - repo: "deb https://packagecloud.io/timescale/timescaledb/ubuntu/ {{ ansible_distribution_release }} main" # TimescaleDB apt repository
     key: "https://packagecloud.io/timescale/timescaledb/gpgkey" # TimescaleDB apt repository key
 
 # RedHat
