--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -1044,7 +1044,7 @@ apt_repository:
     key: "https://repo.pigsty.io/key"  # Pigsty apt repository key
   - repo: "deb https://packagecloud.io/timescale/timescaledb/ubuntu/ {{ ansible_distribution_release }} main" # TimescaleDB apt repository
     key: "https://packagecloud.io/timescale/timescaledb/gpgkey" # TimescaleDB apt repository key
-  - repo: "deb https://packagecloud.io/citusdata/community/ubuntu/ {{ ansible_distribution_release }} main" # CitusDB apt repository
+  - repo: "deb https://packagecloud.io/citusdata/community/ubuntu/ jammy main" # CitusDB apt repository
     key: "https://packagecloud.io/citusdata/community/gpgkey" # CitusDB apt repository key
 
 # gpg_key_url="https://repos.citusdata.com/${repo_name}/gpgkey"
