--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -301,7 +301,6 @@ postgresql_extensions:
 #  - { ext: "pg_stat_statements", db: "" }
 #  - { ext: "pg_stat_statements", db: "" }
   - { ext: "pg_repack", db: "postgres" }  # postgresql-<version>-repack package is required
-  - { ext: "pg_stat_kcache", db: "postgres" }  # postgresql-<version>-pg-stat-kcache package is required
 #  - { ext: "", db: "" }
 #  - { ext: "", db: "" }
   - { ext: "timescaledb", db: "awareiot" }
@@ -315,7 +314,8 @@ postgresql_extensions:
   - { ext: "pg_background", db: "postgres" }
   - { ext: "pg_stat_monitor", db: "awareiot" }
   - { ext: "pg_stat_statements", db: "awareiot" }
-  - { ext: "auto_explain", db: "" }
+  - { ext: "pg_stat_kcache", db: "awareiot" }  # postgresql-<version>-pg-stat-kcache package is required
+#  - { ext: "auto_explain", db: "" }
   - { ext: "pg_partman", db: "awareiot" }
 
 # Example PostgreSQL parameters (stored in DCS)
@@ -371,7 +371,7 @@ postgresql_parameters:
   - { option: "hot_standby_feedback", value: "on" } # allows feedback from a hot standby to the primary that will avoid query conflicts
   - { option: "max_standby_streaming_delay", value: "30s" }
   - { option: "wal_receiver_status_interval", value: "10s" }
-  - { option: "shared_preload_libraries", value: "pg_stat_statements,auto_explain,timescaledb" } # pg_stat_kcache, pg_wait_sampling are recommended
+  - { option: "shared_preload_libraries", value: "citus,pg_stat_statements,pg_stat_kcache,pg_wait_sampling,auto_explain,timescaledb" } # pg_stat_kcache, pg_wait_sampling are recommended
   - { option: "pg_stat_statements.max", value: "10000" }
   - { option: "pg_stat_statements.track", value: "all" }
   - { option: "pg_stat_statements.track_planning", value: "true" }
