--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -306,11 +306,11 @@ postgresql_extensions:
   - { ext: "timescaledb", db: "awareiot" }
   - { ext: "timescaledb_toolkit", db: "awareiot" }
 #  - { ext: "citus", db: "awareiot", schema: "pg_catalog" }
-  - { ext: "citus_columnar", db: "awareiot", schema: "pg_catalog" } # required for timeseries extension
+#  - { ext: "citus_columnar", db: "awareiot", schema: "pg_catalog" } # required for timeseries extension
   - { ext: "timeseries", db: "awareiot" }
 #  - { ext: "pg_cron", db: "postgres", schema: "pg_catalog" }
 #  - { ext: "pg_task", db: "postgres" }
-  - { ext: "pgmq", db: "postgres" }
+  - { ext: "pgmq", db: "postgres", schema: "pgmq" } # PostgreSQL Message Queue (PGMQ) extension
   - { ext: "pg_later", db: "postgres", schema: "pglater" }
   - { ext: "pg_background", db: "postgres" }
   - { ext: "pg_stat_monitor", db: "awareiot" }
@@ -372,7 +372,7 @@ postgresql_parameters:
   - { option: "hot_standby_feedback", value: "on" } # allows feedback from a hot standby to the primary that will avoid query conflicts
   - { option: "max_standby_streaming_delay", value: "30s" }
   - { option: "wal_receiver_status_interval", value: "10s" }
-  - { option: "shared_preload_libraries", value: "citus,pg_stat_statements,pg_stat_kcache,pg_wait_sampling,auto_explain,timescaledb,pg_task,pg_cron" } # pg_stat_kcache, pg_wait_sampling are recommended
+  - { option: "shared_preload_libraries", value: "citus,citus_columnar,pg_stat_statements,pg_stat_kcache,pg_wait_sampling,auto_explain,timescaledb,pg_task,pg_cron" } # pg_stat_kcache, pg_wait_sampling are recommended
   - { option: "pg_stat_statements.max", value: "10000" }
   - { option: "pg_stat_statements.track", value: "all" }
   - { option: "pg_stat_statements.track_planning", value: "true" }
