--- a/automation/roles/common/defaults/main.yml
+++ b/automation/roles/common/defaults/main.yml
@@ -312,7 +312,7 @@ postgresql_extensions:
 #  - { ext: "pg_cron", db: "postgres", schema: "pg_catalog" }
 #  - { ext: "pg_task", db: "postgres" }
   - { ext: "pgmq", db: "postgres", schema: "pgmq" } # PostgreSQL Message Queue (PGMQ) extension
-  - { ext: "pg_later", db: "postgres", schema: "pglater" }
+#  - { ext: "pg_later", db: "postgres", schema: "pglater" }
   - { ext: "pg_background", db: "postgres" }
   - { ext: "pg_stat_monitor", db: "awareiot" }
   - { ext: "pg_stat_statements", db: "awareiot" }
@@ -373,7 +373,7 @@ postgresql_parameters:
   - { option: "hot_standby_feedback", value: "on" } # allows feedback from a hot standby to the primary that will avoid query conflicts
   - { option: "max_standby_streaming_delay", value: "30s" }
   - { option: "wal_receiver_status_interval", value: "10s" }
-  - { option: "shared_preload_libraries", value: "citus,citus_columnar,pg_stat_statements,pg_stat_kcache,pg_wait_sampling,auto_explain,timescaledb,pg_task,pg_cron" } # pg_stat_kcache, pg_wait_sampling are recommended
+  - { option: "shared_preload_libraries", value: "citus,citus_columnar,pg_stat_statements,pg_stat_kcache,pg_wait_sampling,auto_explain,timescaledb,pg_task,pg_cron,pg_later,timeseries" } # pg_stat_kcache, pg_wait_sampling are recommended
   - { option: "pg_stat_statements.max", value: "10000" }
   - { option: "pg_stat_statements.track", value: "all" }
   - { option: "pg_stat_statements.track_planning", value: "true" }
